@@ -50,8 +50,8 @@ oauth.password.authentication = TEST
 oauth2.native.client.host = korap.ids-mannheim.de
 oauth2.max.attempts = 3
 # -- scopes separated by space
-oauth2.default.scopes = read_username read_email 
-oauth2.client.credentials.scopes = read_client_info
+oauth2.default.scopes = username email 
+oauth2.client.credentials.scopes = client_info
 
 # JWT
 security.jwt.issuer=korap.ids-mannheim.de
